--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.4.4",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "jsdom": "^23.0.1",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
     "@types/eslint": "^8.44.7",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
