--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.4.4",
+    "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
